--- a/Métodos para filtragem de elementos, first, eq e last [jQuery].html
+++ b/Métodos para filtragem de elementos, first, eq e last [jQuery].html
@@ -44,6 +44,7 @@
         $('p').not('.borda').css({'color': '#00f'})
         //$('p').eq(2).css({'border': '1px solid #f00', 'background-color':'#aaf'})
         //$('p').last().css({'border': '1px solid #f00'})
+        //$('p').first().css({'border': '1px solid #f00'})
     </script>
         
 </body>
