--- a/Aprendendo sobre as funções Append e AppendTo em jQuery.html
+++ b/Aprendendo sobre as funções Append e AppendTo em jQuery.html
@@ -48,7 +48,7 @@
                 r=Math.floor(Math.random()*255)
                 g=Math.floor(Math.random()*255)
                 b=Math.floor(Math.random()*255)
-                $('#caixa').append("<div class='subcaixa' style='background-color:rgb("+r+","+g+","+b+")'></div>")
+                $("<div class='subcaixa' style='background-color:rgb("+r+","+g+","+b+")'></div>").appendTo($('#caixa'))
             }
         })
         
